Pocetna verzija pocetne strane v2

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
     <title>Warhammer Fantasy</title>
-    <style id="pozadina">body {background-image: url('pozadina.jpg'); background-repeat: no-repeat; 
-      background-attachment: fixed;
-      background-size: cover; }</style>
 
       <nav id="navigacija">
         <a href="index.html">Home Page</a>
@@ -25,7 +22,7 @@
 <body>
     <div id="kontejner">
         <div id="prvi_deo">
-            <h1><i>Warhammer Fantasy</i></h1>
+            <img id="warhammer_gimp" src="warhammer gimp.png" a="naslov">
             <img id="world" src="world.jpg" a="Map of the Warhammer World, Old and New.">
             <p id="world_tekst"><b><i>THE MAPS OF THE OLD AND NEW WORLD OF WARHAMMER.</i></b></p>
             <blockquote><i><b>"Forget the promise of progress and understanding, for the grim dark future there is only war.
