Pocetna verzija pocetne strane v3

--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
     <div id="kontejner">
         <div id="prvi_deo">
             <img id="warhammer_gimp" src="warhammer gimp.png" a="naslov">
-            <img id="world" src="world.jpg" a="Map of the Warhammer World, Old and New.">
-            <p id="world_tekst"><b><i>THE MAPS OF THE OLD AND NEW WORLD OF WARHAMMER.</i></b></p>
-            <blockquote><i><b>"Forget the promise of progress and understanding, for the grim dark future there is only war.
-                There is no peace amongst the stars, only an eternity of carnage and slaughter, and laughter of thirsting gods".</b></i></blockquote>
-            <cite>Vulkan, Primarch of the XVIII Legion Astartes "Salamanders"</cite>
+            <figure>
+                <img id="world" src="world.jpg" a="Map of the Warhammer World, Old and New.">
+                <figcaption><b><i>THE MAPS OF THE OLD AND NEW WORLD OF WARHAMMER.</i></b></figcaption>
+            </figure>
+            <figure>
+                <blockquote><i><b>"Forget the promise of progress and understanding, for the grim dark future there is only war.
+                  There is no peace amongst the stars, only an eternity of carnage and slaughter, and laughter of thirsting gods".</b></i></blockquote>
+                <figcaption><cite>Vulkan, Primarch of the XVIII Legion Astartes "Salamanders"</cite></figcaption>
+            </figure>
             <p> Millions years ago, a race being known as <b><i>The Old Ones</i></b>, strange  creatures possessing almost god-like powers, shaped the climate and geography of this world.
                 These creatures were said to be alien to the world and were crafters and engineers. 
                 They looked upon this newly discovered world and found it good, and knew that it would play the central role in the destiny of the universe, 
@@ -35,8 +39,10 @@
                 To aid in their ordering, they created so-called <b><i>Polar Gates</i></b> at the northern and southern extremes of the planet which allowed them to travel instantaneously through the vast space that separated their various colonised worlds. 
                 The Old Ones would later pay the price for their arrogant intrusions. For their Warp Gates at the poles of the world, each dwarfing the greatest mountains, were destroyed as the spirit realm beyond the veil writhed and boiled with the changing of the mortal plane.
             </p>
-            <img id="old_ones" src="The Old Ones.png" a="The Old Ones">
-            <p id="old_ones_tekst"><b><i>The Old Ones</i></b></p>
+            <figure>
+              <img id="old_ones" src="The Old Ones.png" a="The Old Ones">	
+                <figcaption><b><i>The Old Ones</i></b></figcaption>
+            </figure>
             <p>
                 The Warp Gates collapsed in an epoch-shattering explosion, flattening continents and replacing the constructions with massive seas of boiling <b><i>Chaos</i></b> where reality and the aethyr overlapped. Hordes of daemonic creatures charged into the world and slaughtered the Old Ones, bringing their shining civilisation to its knees.
             </p>
