Pocetna verzija pocetne strane v4

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img id="warhammer_gimp" src="warhammer gimp.png" a="naslov">
             <figure>
                 <img id="world" src="world.jpg" a="Map of the Warhammer World, Old and New.">
-                <figcaption><b><i>THE MAPS OF THE OLD AND NEW WORLD OF WARHAMMER.</i></b></figcaption>
+                <figcaption><i>THE MAPS OF THE OLD AND NEW WORLD OF WARHAMMER.</i></figcaption>
             </figure>
             <figure>
                 <blockquote><i><b>"Forget the promise of progress and understanding, for the grim dark future there is only war.
@@ -88,8 +88,11 @@
                 All the gods of the world were in fact the survivors of the previous world, a world that was consumed in darkness, and those that survived it would come to lead a new life in the next. And so it was that the world's doom would eventually arrive, and Chaos will forever rule it as its own.
                 This was a prophecy which ultimately came to fruition during the <b><i>End Times</i></b> when the <b><i>Warhammer World</i></b> was unmade by the power of Chaos and was replaced with the birth of a new Creation from its battered heart, <b><i>the Mortal Realms</i></b>.
             </p>
-            <img id="mortal_realms" src="Mortal Realms.jpg" a="Map of the Mortal Realms">
-            <p ><i>The picture above represents the <b>Map of the Mortal Realms</b> and, symbols of each respected Mortal Realm, from the top clockwise is <b>Azyr</b>, <b>Ghyran</b>, <b>Ghur</b>, <b>Chamon</b>, <b>Aqshy</b>, <b>Shyish</b>, <b>Ulgu</b> and <b>Hysh</b>.</i></p>
+            <figure>
+                <img id="mortal_realms" src="Mortal Realms.jpg" a="Map of the Mortal Realms">
+                <figcaption><i>The picture above represents the <b>Map of the Mortal Realms</b> and, symbols of each respected Mortal Realm, 
+                  from the top clockwise is <b>Azyr</b>, <b>Ghyran</b>, <b>Ghur</b>, <b>Chamon</b>, <b>Aqshy</b>, <b>Shyish</b>, <b>Ulgu</b> and <b>Hysh</b>.</i></figcaption>
+            </figure>
         </div>
     </div>
 </body>
