Pocetna verzija pocetne stranice v5

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         <div id="prvi_deo">
             <img id="warhammer_gimp" src="warhammer gimp.png" a="naslov">
             <figure>
+              <blockquote>
+                <i><b>"Ask not the Eldar a question, for they will give you three answers, all of which are true and terrifying to know."</b></i>
+              </blockquote>
+              <figcaption>
+                <cite><i>An old Eldarian saying</i></cite>
+              </figcaption>
+            </figure>
+            <figure>
                 <img id="world" src="world.jpg" a="Map of the Warhammer World, Old and New.">
                 <figcaption><i>THE MAPS OF THE OLD AND NEW WORLD OF WARHAMMER.</i></figcaption>
             </figure>
