--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
 </head>
 <body>
-    <div id="kontejner">
+    <div id="kontejner" class="kontejneri">
         <div id="prvi_deo">
             <img id="warhammer_gimp" src="warhammer gimp.png" a="naslov">
             <figure>
