Old world verzija v3

--- a/old world.html
+++ b/old world.html
@@ -37,7 +37,7 @@
               </figcaption>
             </figure>
             <p> The <b><i>Old World</i></b> is part of the great eastern continent of the Warhammer World. It is the region of that landmass where most of the realms of Men are based and is usually defined as the area west of the Worlds Edge Mountains, north of the Blood River and the Dwarfs sea fortress of Barak Varr and south of the Troll Country. The isle of Albion lies off the coast of the Old World and is similar to the dread land of Norsca, in that it is neither a part of the Old World or entirely separate from it.
-                The Old World is home to the Human realms of the <b><i>Empire</i></b>, <b><i>Kislev</i></b>, <b><i>Bretonnia</i></b>, <b><i>Tilea</i></b>, <b><i>Estalia</i></b> the independent city-state of <b><i>Marienburg</i></b> in the Wasteland, the Elven forest of <b><i>Athle Loren</i></b>, and the lawless <b><i>Border Princess</i></b>, as well as several <b><i>Dwarf holds and clans</i></b>.
+                The Old World is home to the Human realms of the <b><i>Empire</i></b>, <b><i>Kislev</i></b>, <b><i>Bretonnia</i></b>, <b><i>Tilea</i></b>, <b><i>Estalia</i></b> the independent city-state of <b><i>Marienburg</i></b> in the Wasteland, the Elven forest of <b><i>Athel Loren</i></b>, and the lawless <b><i>Border Princess</i></b>, as well as several <b><i>Dwarf holds and clans</i></b>.
                 In the past, before the rise of Men, the Old World was ruled by Dwarfs and Elves, until the <b><i>"War of the Beard"</i></b> forever sundered the friendship that once defined relations between a Dwarf and Elf. The ruins of ancient structures built by those elder races are still scattered across the coastlines and high mountains of the Old World.
             </p>
             <figure>
@@ -49,8 +49,8 @@
                 The Old World has been invaded many times over the years: <b><i>Greenskins</i></b> hordes from the Badlands to the south, <b><i>Chaos</i></b> incursions from the north, <b><i>Skaven</i></b> attacks from their underground lairs, unrelenting armies of the <b><i>Undead Vampire Counts</i></b> from the east, and large scale raids by <b><i>Dark Elves</i></b> fleets have all threatened to destroy one or all of the realms of Men. However, Human lives are relatively short, and over the generations the memories of these events fade into myth and legend, and they become nothing more than stories to scare children at bedtime.
             </p>
             <h1>Kingdoms of the Old World</h1>
-            <h2>Empire</h2>
-            <img id="karl" src="Karl Franz.png" a="Karl Franz" style="float:left; margin-right: 10px; margin-bottom: 10px; border: 1px solid black; padding: 5px;">
+            <h2><b>Empire</b></h2>
+            <img id="karl" src="Karl Franz.png" a="Karl Franz" style="float:left; margin-right: 10px; margin-bottom: 10px; margin-top: 35px; border: 1px solid black; padding: 5px;">
             <p>
                 The Empire has stood for over 2500 years as the most powerful nation of men in the Old World and possessing black powder technology while more antiquated weapons are still more common and the norm. The Empire was founded by <b><i>Sigmar Heldenhammer</i></b> from a collection of warring tribes inhabiting the region that is now the Empire. Sigmar was of the Unberogen tribe who inhabited what is now Reikland and he is now the patron deity of the Empire.
                 The Empire is led by an Emperor, though he is elected from and by the ranks of the <b><i>Elector Counts</i></b>, rulers of each individual state. Though it has gone through various periods of fragmentation, it was reunited two centuries ago into the strong power it now is by Emperor <b><i>Magnus the Pious</i></b>. The current Emperor is <b><i>Karl Franz</i></b>.
@@ -59,6 +59,52 @@
                 <img class="slika" src="map of the empire.jpg" a="Map of the Empire">	
                 <figcaption>Map of the Empire</figcaption>
             </figure>
+            <figure>
+                <blockquote>
+                  <i><b>"Three things make the Empire great; faith, steel and gunpowder."</b></i>
+                </blockquote>
+                <figcaption>
+                  <cite><i>Emperor Magnus the Pious</i></cite>
+                </figcaption>
+            </figure>
+            <h2><b>Bretonnia</b></h2>
+            <img id="Gilles" src="Gilles le Breton.png" a="Gilles" style="float:right; margin-left: 10px; margin-bottom: 10px; margin-top: 35px; border: 1px solid black; padding: 5px;">
+            <p>
+                Bretonnia is a large feudal kingdom and It was formed from a collection of warring city-states by <b><i>Gilles le Breton</i></b> at the bidding of the <b><i>Lady of the Lake</i></b> who would later become the patron deity of Bretonnia. Bretonnia is the second largest nation in the Old World after the Empire and has a strict class system where the upper class abide by principles of chivalry and are rich and educated. The lower class makes up the majority of the population, and is made up of oppressed peasants. Bretonnians eschew black powder weaponry as cowardly favouring more traditional mounted combat using knights, accompanied by hordes of peasant footmen as support. The <b><i>Knights of Bretonnia</i></b> are regarded as the greatest in Old World, and all male nobles are expected to train in the arts of war and chivalry, or face dishonour. Most renowned of all are the <b><i>Grail Knights</i></b>, beings who have supped from the <b><i>Holy Grail</i></b> and become imbued with fay power and longevity. Bretonnia is ruled by a <b><i>Royarch</i></b>, a fearsome warrior-king who is almost always a Grail Knight. The current Royarch is <b><i>King Louen Leoncoeur – The "Lionhearted"</i></b>.
+            </p>
+            <figure>
+                <img class="slika" src="Map of Bretonnia.jpg" a="Map of Bretonnia" >	
+                <figcaption>Map of Bretonnia</figcaption>
+            </figure>
+            <figure>
+                <blockquote>
+                  <i><b>"I give my body, heart and soul, to the Lady whom I seek. No plea for help shall find me wanting. No obstacle will stand before me. No evil will taint the lands bequeathed unto me. When the clarion call is sounded, I will ride out and fight in the name of Liege and Lady. That which is sacrament, I shall preserve. That which is sublime, I will protect. That which threatens, I will destroy, for my holy wrath will know no bounds. Honour is all. Chivalry is all. Rejoice, for we, the Knights of Bretonnia… will be your shield."</b></i>
+                </blockquote>
+                <figcaption>
+                  <cite><i>The combined vows of the Knights of Bretonnia</i></cite>
+                </figcaption>
+            </figure>
+            <h2><b>Kislev</b></h2>
+            <p>
+                Kislev is know for its freezing temperatures, and is the northernmost nation of the Old World and bears the brunt of most Chaos invasions. Kislev is ruled by the <b><i>Tzar</i></b> and the <b><i>Ice Queen</i></b>. Currently Kislev is ruled only by a <b><i>Ice Queen Katarin</i></b>. The capital city <b><i>Kislev</i></b>, <b><i>Erengrad</i></b> and <b><i>Praag</i></b> are the three largest cities in Kislev, with Erengrad and Praag both being situated on the river <b><i>Lynsk</i></b>, Kislev’s largest river. Kislev was founded around 1000 years after the Empire by <b><i>Gospodar</i></b> and <b><i>Ungol</i></b> tribes. Its main god is <b><i>Ursun</i></b>, the <b><i>father of Bears</i></b>, at least in the Gospodar influenced south. In the nomadic north, the Ungol tribes keep the worship of <b><i>Dahz</i></b> and <b><i>Tor</i></b>, as well as the veneration of minor spirits. Kislev army specializes in use of heavy bear cavarly as their main battle units, and they are mostly consisted of Kislevs male nobles.
+            </p>
+            <figure>
+                <img class="slika" src="Map of Kislev.jpg" a="Map of Kislev" >	
+                <figcaption>Map of Kislev</figcaption>
+            </figure>
+            <figure>
+                <blockquote>
+                  <i><b>"You look down on us and think we are little better than barbarians, but you should be glad we are, for without us here, the northern tribes would be dining on the flesh of your children in your burning homes. But for the courage that flows in our veins would your lands be theirs. Look down on us? You should get on your knees and thank us every day!"</b></i></blockquote>
+                <figcaption>
+                  <cite><i>Vitalia Kovash, Kislevite Winged Lancer</i></cite>
+                </figcaption>
+            </figure>
+            <h2><b>Athel Loren</b></h2>
+            <img id="orion" src="Orion.png" a="orion" style="height: 400px; float:left; margin-right: 10px; margin-bottom: 10px; margin-top: 35px; border: 1px solid black; padding: 5px;">
+            <p>
+                Athel Loren is a magical forest comprised of ancient, sentient trees in the southeast of Bretonnia, and is inhabited by the <b><i>Wood Elves</i></b>, or <b><i>Asrai</i></b> as they call themselves. The Wood Elves have inhabited the area since the main body of High Elves was driven out almost 5000 years ago after the War of the Beard, a titanic conflict with the Dwarfs, and have become deeply bonded to the forest. While isolated colonies of Wood Elves exist elsewhere, Athel Loren is their homeland. They are ruled by a <b><i>King</i></b> and <b><i>Queen of the Woods</i></b>, that currently being <b><i>Orion</i></b> and <b><i>Ariel</i></b>. Asrai are highly secretive and isolationist race, only going to battle when their realm needs defending from the intruders. They are masters of ambushing and fighting in the woods. Their armies mostly consist of lightly armoured missile infantry and deer cavalry.
+            </p>
+            <img class="slika"src="Waywatchers.jpg">
         </div>
     </div>
 </body>
