Old World zavrsen

--- a/old world.html
+++ b/old world.html
@@ -104,7 +104,32 @@
             <p>
                 Athel Loren is a magical forest comprised of ancient, sentient trees in the southeast of Bretonnia, and is inhabited by the <b><i>Wood Elves</i></b>, or <b><i>Asrai</i></b> as they call themselves. The Wood Elves have inhabited the area since the main body of High Elves was driven out almost 5000 years ago after the War of the Beard, a titanic conflict with the Dwarfs, and have become deeply bonded to the forest. While isolated colonies of Wood Elves exist elsewhere, Athel Loren is their homeland. They are ruled by a <b><i>King</i></b> and <b><i>Queen of the Woods</i></b>, that currently being <b><i>Orion</i></b> and <b><i>Ariel</i></b>. Asrai are highly secretive and isolationist race, only going to battle when their realm needs defending from the intruders. They are masters of ambushing and fighting in the woods. Their armies mostly consist of lightly armoured missile infantry and deer cavalry.
             </p>
-            <img class="slika"src="Waywatchers.jpg">
+            <figure>
+                <img class="slika"src="Waywatchers.jpg">
+                <figcaption>Asrai Waywatchers</figcaption>
+            </figure>
+            <figure>
+                <blockquote>
+                  <i><b>"Athel Loren shall not suffer the presence of Men, nor Orcs, nor Dwarfs, nor Beastmen. If a foe takes a single step upon such sacred soil, they shall not take another."</b></i></blockquote>
+                <figcaption>
+                  <cite><i>Scarloc, Mist Walker of Athel Loren</i></cite>
+                </figcaption>
+            </figure>
+            <h2><b>Karaz Ankor</b></h2>
+            <img id="Thorgrim" src="Thorgrim Grudgebearer.jpg" a="Thorgrim" style="float: right; margin-left: 10px; margin-bottom: 10px; margin-top: 50px; border: 1px solid black; padding: 5px;">
+            <p>
+                The Karaz Ankor, or <b><i>"The Everlasting Realm"</i></b> in dwarven, is the primary homeland of Dwarven Kingdoms, the holds and cities of the <b><i>Worlds Edge Mountains</i></b> that they have inhabited since the earliest days of their recorded history. Their original homeland was located in the mountains of the Sounthlands, but they migrated northwards in search of new veins of precious metals and gems to mine, gradually settling in the Worlds Edge Mountains. The Dwarf people as a whole are sturdy and strong, brilliant craftsmen and excellent warriors, but above all they prize themselves on their loyalty to each other and to those they are indebted to. This strong bond of kinship has ensured that the Dwarfs stand as one of the most unified races in the world. They are known far and wide as the greatest miners and tunnellers in the world, the ageless halls of <b><i>Karaz-a-Karak</i></b>, <b><i>"Everpeak"</i></b>, are but one gigantic example of how huge their works can become. As expected, the Dwarfs are highly proficient smiths and craftsmen, capable of producing works far more beautiful than the Elven metalworkers in far Ulthuan and hundreds of times more valuable than the trinkets of Men. Proud, honourable and enduring, it is said that the Dwarfs shall weather the horrors and misery of the world until its final bitter end. <b><i>Thorgrim Grudebearer</i></b> is the current <b><i>High King</i></b> of the dwarfes. In his possesion is the <b><i>Dammaz Kron</i></b> or the <b><i>The Great Book of Grudges</i></b>, where he writes down every wrong and treacherous deed that has been done against the dwarfs. With Karaz Ankor being such a wast kingdom, it has to have great armies to defend it. Dwarven armies consist of a wide range of heavy melee and range infantry and also Black Powder artillery.
+            </p>
+            <figure>
+                <img class="slika" src="Dwarfs.jpg">
+                <figcaption>Dwarfs</figcaption>
+            </figure>
+            <figure>
+                <blockquote>
+                    <i><b>"We sons of Grungni may have drunk deep from the bitter waters of misfortune, but we yet survive. Whilst a single Dwarf draws breath, we will fight the evils that assail us, and we will never, ever give up."</b></i>
+                </blockquote>
+                <cite>Hengist Stonebelly, Dwarf Longbeard</cite>
+            </figure>
         </div>
     </div>
 </body>
