--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Warhammer Fantasy</title>
       <nav id="navigacija">
-        <a href="index.html">Home Page</a>
+        <a class="trenutna" href="index.html">Home Page</a>
         <a href="old world.html">Old World</a>
         <a href="southlands.html">Southlands</a>
         <a href="ulthuan.html">Ulthuan</a>
@@ -19,7 +19,7 @@
       </nav>
 </head>
 <body>
-    <div id="kontejner" class="kontejneri">
+    <div class="kontejneri">
         <div id="prvi_deo">
             <img id="warhammer_gimp" src="warhammer gimp.png" a="naslov">
             <figure>
