--- a/old world.html
+++ b/old world.html
@@ -8,11 +8,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
-    <title>Old World</title>
     <title>Warhammer Fantasy</title>
     <nav id="navigacija">
         <a href="index.html">Home Page</a>
-        <a href="old world.html">Old World</a>
+        <a class="trenutna" href="old world.html">Old World</a>
         <a href="southlands.html">Southlands</a>
         <a href="ulthuan.html">Ulthuan</a>
         <a href="naggarond.html">Naggarond</a>
@@ -21,10 +20,10 @@
 </head>
 <body>
     <h1>Old World</h1>
-    <div id="kontejner2" class="kontejneri">
+    <div class="kontejneri">
         <div id="prvi_deo">
             <figure>
-                <img class="slika" src="old_world.jpg" a="Map of the Warhammer World, Old and New.">
+                <img class="slika" src="old_world.jpg" a="Map of the Old World.">
                 <figcaption><i>MAP OF THE OLD WORLD OF WARHAMMER</i></figcaption>
             </figure>
             <figure>
