--- a/southlands.html
+++ b/southlands.html
@@ -48,6 +48,71 @@
                 </blockquote>
                 <figcaption><cite><i>Gialar Kunst, Dwarf Loremaster</i></cite></figcaption>
             </figure>
+            <p>
+                The Greenskins are a highly primitive and warlike race of bestial humanoid barbarians and raiders that occupy much of the Eastern Hemisphere of the Warhammer World.
+                The term "Greenskins" is a common collective description used by many civilised nations to refer to the forces of the Orcs and Goblins and other biologically related races.
+                The broadest division is between the Orcs, who are strong, brutish, and savage warriors, and the Goblins, who are smaller and weaker, but cunning and conniving creatures.
+                The Greenskins are considered by many to be the scourge of all civilisation. These tribal warriors are extremely violent, raiding ceaselessly, carrying war and barbarism to all corners of the known world.
+                Time and again, hordes of Greenskins would arise without warning and lay a great swath of destruction that has no direction or purpose other than simple violence.
+                Indeed, the Greenskin race's single motive is violence, an ever increasing mass of warfare that has the potential to dominate and cover the entire world in a seething green tide.
+                However, the Greenskins' tendency for warfare has created a division within their society that has ensured their race shall never reach such heights. Since the dawn of their history, the Greenskins have been plagued by a never-ending series of civil wars that has consumed millions of their own kind, for such is their desire for battle that Greenskin tribes have been known to fight each other just as much as they fight the other civilised races of the Old World.
+                Though such strife should spell doom for their race, such are the Greenskins' ability to both survive and thrive in the harshest of environments that they can never truly be exterminated.
+            </p>
+            <figure>
+                <img class="slika" src="pozadina2.jpg">
+                <figcaption>Dwarfen hold under-siege by a horde of Greenskins</figcaption>
+            </figure>
+            <h2><b>Skaven</b></h2>
+            <p>
+                The Skaven, sometimes known as the Ratmen, the Ratkin or the Children of the Horned Rat, are a malevolent and diabolical race of large humanoid rat-creatures that inhabits a massive inter-continental underground empire known in their tongue simply as the Under-Empire, where at the very heart of Skavendom lies the horrific city of Skavenblight, the species capital city and the probable birthplace of the Skaven race. The Skaven as a whole are a cruel, treacherous and highly numerous species that have since spread their loathsome corruption to the farthest corners of the Warhammer World. From deep below the earth, these scavengers have built a vast Empire, whose military power and incomprehensible numbers has the potential to smother the kingdoms of the Old World in a seething tide of violence and anarchy. It is believed by all of Skaven-kind that the world is destined to be theirs, for they consider themselves the Supreme Master Race, undeniably superior in every way to all the other races of the World.
+            </p>
+            <figure id="pozadina_fig">
+                <table>
+                    <tr id="slike">
+                        <td><img src="moulder.png"></td>
+                        <td><img src="pestilens.png"></td>
+                        <td><img src="eshin.png"></td>
+                        <td><img src="skryre1.jpg"></td>
+                    </tr>
+                    <tr>
+                        <td>Banner of Clan Moulder</td>
+                        <td>Banner of Clan Pestilens</td>
+                        <td>Banner of Clan Eshin</td>
+                        <td>Banner of Clan Skryre</td>
+                    </tr>
+                </table>
+                <figcaption>Banner of the Four Great Skaven Clans</figcaption>
+            </figure>
+            <p>
+                This unwavering belief stems from the promises made by their horrifically malevolent deity, known by many legendary names, but his most well-known title is that of the Horned Rat. The Horned Rat is known as the Harbinger of Corruption and Disease, the embodiment of all things the Skaven are or ever will be, and whose worship over the Under-Empire is both supreme and absolute. Within the cruel hierarchy of the Under-Empire, the wishes and demands of the Horned Rat is issued and maintained by the ruthless tyranny of the Council of Thirteen, an organisation that consists of the twelve most powerful Warlords within the Under-Empire whilst the thirteenth seat is reserved for the Horned Rat himself. It is due only to the Council's harsh tyranny that the Under-Empire remains unified in some shape or form for centuries, for none could ever hope to overcome the legions of warriors the Council has under their iron-fisted rule.
+            </p>
+            <figure>
+                <blockquote>
+                    <i><b>"Steeling themselves, the pitiful remnants of the city's once proud populace descended. In the ancient halls of kingship they found the Dwarfs, now naught but gnawed bones and scraps of cloth. And there they saw by the dying light of their torches the myriad eyes about them, glittering like liquid midnight as the rats closed in for the kill. The manlings stood back to back and fought for their lives, but against such implacable ferocity and countless numbers of the verminous horde, their weapons were useless. The tide of monstrous rats flowed over them one by one, dragging them down to be torn apart, the yellow chisel-teeth sinking into their soft-flesh, the dark furred mass drowning their pitiful screams with their hideous chittering..."</b></i>
+                </blockquote>
+                <figcaption><cite><i>Translated from the Tilean tale "The Doom of Kavzar" also called "The Curse of Thirteen"</i></cite></figcaption>
+            </figure>
+            <p>
+                Out of all the mortal civilisations within the greater world, no single race, neither the ruthless barbarian tribes of the north nor the savage greenskins of the east can be compared in terms of instability to that of the Skaven Under-Empire. The Skaven race as a whole is extremely divided, often far more divided than perhaps any other race known in existence. Such disunion and ruthless lack of cooperation stems from the Skaven's insatiable need to survive, thrive, and reign tyrannically over his brethren. To a Skaven, there is no such thing as pity, remorse, compassion, or cooperation. There is simply survival, survival in a turbulent society that only spares those that possess the brute strength, extreme cunning, and the vicious instinct to outmanoeuvre and kill the opposition, no matter the cost or the body count of either friend or foe. Though no matter how divided their race may be, they are nonetheless unified in a single cause, and that cause is to conquer the surface world and bring about the Great Ascendancy, where it is said that the Horned Rat's children will swarm across the face of the earth and claim all of it as their own.
+            </p>
+            <h2><b>Tomb Kings</b></h2>
+            <figure>
+                <img class="slika" src="tomb kings.jpg">
+                <figcaption>Map of the Kingdom of Tomb Kings</figcaption>
+            </figure>
+            <p>
+                The Tomb Kings, known as the Priest Kings in their former lives, are the undying rulers of Nehekhara, an ancient Human civilisation that formed a great and powerful empire some two thousand five hundred years before the birth of Sigmar Heldenhammer and the founding of the Empire. Out of all the unliving creatures that would claim dominion and royalty over the dead, only the Tomb Kings could truly claim such masterful and undisputed sovereignty. For they had once ruled a mighty and far-flung empire during a time when the rest of Mankind were little more than savage barbarians.
+            </p>
+            <img class="slika" src="Tomb Kings2.jpg">
+            <p>
+                Long ago, during an ancient and forgotten age, Nehekhara stood as a shining beacon of civilisation and Human achievement; a golden age when its cities shone with a majestic splendour, its buildings crafted from magnificent marble and limestone, its armies capable of conquering entire kingdoms. In this long-lost age, Nehekhara's mighty rulers reigned as living gods amongst men. But this great realm was destroyed millennia ago through acts of great treachery and powerful sorcery. The living of Nehekhara perished long ago in a single, mournful night, and in their absence, the dead stirred from their graves and claimed the land anew.
+            </p>
+            <figure>
+                <blockquote>
+                    <i><b>"In that dread desert, beneath the moon´s pale gaze, dead men walk. They haunt the shifting dunes of the breathless, windless night, brandish weapons of bronze in mocking challenge and bitter resentment of the life they no longer possess. And sometimes, in ghastly dry voices, like the rustling of sun-baked reeds, they whisper the one word they remember from life. The Name of the one who cursed them to their existence, more than death but less than life. They whisper the name, Nagash..."</b></i>
+                </blockquote>
+                <figcaption><cite><i>Extract from the Liber Necris, translated by Mannfred von Carstein</i></cite></figcaption>
+            </figure>
         </div>
     </div>
 </body>
